fixed full alignments of cover block

--- a/sass/layout/alignments.scss
+++ b/sass/layout/alignments.scss
@@ -7,6 +7,7 @@
 .wp-block-post-content > .alignfull {
 	margin-left: -3.5vw;
 	margin-right: -3.5vw;
+	width: auto;
 }
 
 @media only screen and (min-width: 800px) {
